2010-02-25  Mario  <mario@carrion.mx>
In /:
	* TODO, README, AUTHORS: File added.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-02-25  Mario  <mario@carrion.mx>
+
+	* TODO, README, AUTHORS: File added.
+
+
 2010-02-21  Mario Carrion  <mario@carrion.mx>
 	
 	* Initial import.
