2010-02-25  Mario Carrion  <mario@carrion.mx>
In /:
	* TODO: Group request removed.
In vimeo-sharp/:
	* VimeoSharp/VimeoSharp.csproj:
	* VimeoSharpExample/Program.cs:
	* VimeoSharp/Simple/GroupRequest.cs:
	Group request added.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-02-25  Mario Carrion  <mario@carrion.mx>
+
+	* TODO: Group request removed.
+
 2010-02-25  Mario  <mario@carrion.mx>
 
 	* TODO, README, AUTHORS: File added.
