--- a/vimeo-sharp/ChangeLog
+++ b/vimeo-sharp/ChangeLog
@@ -1,3 +1,12 @@
+2010-02-27  Mario Carrion  <mario@carrion.mx>
+
+	* VimeoSharp/Simple/UserRequest.cs: 
+	* VimeoSharp/Simple/GroupRequest.cs: 
+	* VimeoSharp/Simple/VideoRequest.cs: Using RequestUrls.
+	* VimeoSharp/RequestUrls.cs: File added.
+	* VimeoSharp/VimeoSharp.csproj: Project updated.
+
+
 2010-02-25  Mario Carrion  <mario@carrion.mx>
 
 	* VimeoSharp/VimeoSharp.csproj: 
