2010-02-27  Mario Carrion  <mario@carrion.mx>
In /:
	* TODO: Channel request removed.
In vimeo-sharp/:
	* VimeoSharp/RequestUrls.cs: Fixed VideoUrl.
	* VimeoSharpExample/Program.cs: Example updated to test
	  ChannelRequest.
	* VimeoSharp/Simple/UserRequest.cs,
	  VimeoSharp/Simple/VideoRequest.cs,
	  VimeoSharp/Simple/GroupRequest.cs: Removed unused references.
	* VimeoSharp/VimeoSharp.csproj,
	  VimeoSharpExample/VimeoSharpExample.csproj: Output name changed.
	* VimeoSharp/Simple/ChannelRequest.cs: File added.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-02-27  Mario Carrion  <mario@carrion.mx>
+
+	* TODO: Channel request removed.
+
 2010-02-25  Mario Carrion  <mario@carrion.mx>
 
 	* TODO: Group request removed.
