--- a/vimeo-sharp/ChangeLog
+++ b/vimeo-sharp/ChangeLog
@@ -1,5 +1,17 @@
 2010-02-27  Mario Carrion  <mario@carrion.mx>
 
+	* VimeoSharp/RequestUrls.cs: Fixed VideoUrl.
+	* VimeoSharpExample/Program.cs: Example updated to test 
+	  ChannelRequest.
+	* VimeoSharp/Simple/UserRequest.cs, 
+	  VimeoSharp/Simple/VideoRequest.cs, 
+	  VimeoSharp/Simple/GroupRequest.cs: Removed unused references.
+	* VimeoSharp/VimeoSharp.csproj, 
+	  VimeoSharpExample/VimeoSharpExample.csproj: Output name changed.
+	* VimeoSharp/Simple/ChannelRequest.cs: File added.
+
+2010-02-27  Mario Carrion  <mario@carrion.mx>
+
 	* VimeoSharp/Simple/UserRequest.cs: 
 	* VimeoSharp/Simple/GroupRequest.cs: 
 	* VimeoSharp/Simple/VideoRequest.cs: Using RequestUrls.
