--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2010-02-27  Mario Carrion  <mario@carrion.mx>
 
+	* TODO: Album request removed.
+
+2010-02-27  Mario Carrion  <mario@carrion.mx>
+
 	* TODO: Channel request removed.
 
 2010-02-25  Mario Carrion  <mario@carrion.mx>
