2010-03-03  Mario Carrion  <mario@carrion.mx>
In /:
	* TODO: Album request removed, for real.
In vimeo-sharp/:
	* VimeoSharp/RequestUrls.cs,
	  VimeoSharp/Simple/AlbumRequest.cs,
	  VimeoSharp/Simple/ChannelRequest.cs,
	  VimeoSharp/Simple/GroupRequest.cs,
	  VimeoSharp/Simple/UserRequest.cs,
	  VimeoSharp/Simple/VideoRequest.cs: Urls replaced.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-03-03  Mario Carrion  <mario@carrion.mx>
+
+	* TODO: Album request removed, for real.
+
 2010-02-27  Mario Carrion  <mario@carrion.mx>
 
 	* TODO: Album request removed.
